[gd_scene load_steps=8 format=2]

[ext_resource path="res://Mini Scenes/Enemies/Tank.gd" type="Script" id=1]
[ext_resource path="res://Art/Enemies/GuardianEnemy.png" type="Texture" id=2]
[ext_resource path="res://Art/paralyzed.png" type="Texture" id=3]
[ext_resource path="res://Mini Scenes/Enemies/Light.tscn" type="PackedScene" id=4]
[ext_resource path="res://Art/WhiteBlock.png" type="Texture" id=5]
[ext_resource path="res://Mini Scenes/Enemies/Shield.gd" type="Script" id=6]

[sub_resource type="RectangleShape2D" id=1]
extents = Vector2( 16.1415, 15.8326 )

[node name="Guardian" type="Area2D"]
script = ExtResource( 1 )
_max_health = 3
_speed = 1

[node name="Sprite" type="Sprite" parent="."]
scale = Vector2( 1.5, 1.5 )
texture = ExtResource( 2 )
__meta__ = {
"_edit_lock_": true
}

[node name="Paralysis" type="Sprite" parent="."]
scale = Vector2( 0.3, 0.3 )
texture = ExtResource( 3 )
vframes = 2
hframes = 4
frame = 7
__meta__ = {
"_edit_lock_": true
}

[node name="Collision" type="CollisionShape2D" parent="."]
position = Vector2( -0.387428, 0 )
shape = SubResource( 1 )
__meta__ = {
"_edit_lock_": true
}

[node name="Light" parent="." instance=ExtResource( 4 )]

[node name="Shield" type="Area2D" parent="."]
scale = Vector2( 6.75, 6.75 )
script = ExtResource( 6 )

[node name="Collision" type="CollisionShape2D" parent="Shield"]
position = Vector2( -0.123907, 0 )
shape = SubResource( 1 )

[node name="Sprite" type="Sprite" parent="Shield"]
modulate = Color( 0.831373, 0.0941176, 0.0941176, 0.490196 )
texture = ExtResource( 5 )
__meta__ = {
"_edit_lock_": true
}
[connection signal="changed_stunned" from="." to="Shield" method="_on_Guardian_changed_stunned"]
[connection signal="area_entered" from="Shield" to="Shield" method="_on_Shield_area_entered"]
[connection signal="area_exited" from="Shield" to="Shield" method="_on_Shield_area_exited"]
